# deepagent

./: .gitignore  ARCHITECTURE.md  BENCHMARK_TODO.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
benches/: benchmark_tasks.rs
python/deepagent/: __init__.py
scripts/: benchmark.sh  competency_bench.sh  monitor.sh  pre-commit  setup_pi.sh
src/: lib.rs  main.rs  utils.rs
src/agent/: executor.rs  mod.rs
src/api/: gemini.rs  mod.rs  rate_limiter.rs
src/cli/: mod.rs
src/session/: mod.rs
src/tools/: bash.rs  edit.rs  glob.rs  grep.rs  ls.rs  mod.rs  patch.rs  read.rs  think.rs  todo.rs  webfetch.rs  write.rs
tests/: integration.rs  mock_api.rs
