[package]
name = "deepagent"
version = "0.1.0"
edition = "2021"
description = "Rust coding agent powered by Gemini, installable via pip"
license = "MIT"
readme = "README.md"

[[bin]]
name = "deepagent"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
glob = "0.3"
regex = "1"
tempfile = "3"
similar = "2"
rayon = "1"
rand = "0.8"
async-trait = "0.1"
ignore = "0.4"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
mockito = "1"
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
